@@ -1,3 +1,9 @@
+2016-04-25  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* common-src/file.c (areads_dataready): Also use select to find if
+	  something can be read
+	* server-src/server_util.c (getcmd): Use areads instead of agets
+	* server-src/server_util.c (get_pending_cmd): Call areads_dataready
+
 2016-04-21  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* application-src/amrandom.pl: A new application that generate a
 	  random backup, useful for testing
